<resources>
    <string name="app_name">GamificacionApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--- TODO Activity Show Activity Info-->
    <string name="id_number_label">Id:</string>
    <string name="name_label">Nombre: </string>
    <string name="description_label">Descripción: </string>
    <string name="start_date_label">Fecha de inicio:</string>
    <string name="end_date_label">Fecha de Finalización</string>
    <string name="concept_label">concepto</string>
    <string name="fase_label">Fase</string>


    <!-- TODO messages-->
    <string name="acept_label">aceptar</string>
    <string name="alert_default_title">Alerta</string>
    <string name="error_default_message">Error </string>
    <string name="response_label">Respuesta</string>


    <!-- TODO keys -->
    <string name="result_key">result</string>
    <string name="message_key">message</string>
    <string name="name_key">name</string>
    <string name="id_number_key">idNumber</string>
    <string name="startDate_key">startDate</string>
    <string name="endDate_key">endDate</string>
    <string name="description_key">description</string>
    <string name="activity_has_concept_key">activityHasConcept</string>
    <string name="concept_key">concept</string>
    <string name="object_id_key">id</string>
    <string name="phase_activity_id_key">activity</string>
    <string name="phase_identifier_key">identifier</string>
    <string name="phase_start_date_key">startDate</string>
    <string name="phase_end_date_key">endDate</string>
    <string name="question_statement_key">statement</string>
    <string name="question_phase_id_key">phase</string>
    <string name="phase_quesions_key">question</string>
    <string name="phase_type_key">phaseType</string>
    <string name="phase_key">phase
    </string>
    <string name="fullname_key">fullname</string>
    <string name="email_key">email</string>


    <string name="title_activity_phases_index">PhasesIndexActivity</string>
    <string name="title_activity_quiz">QuizActivity</string>


    <!--TODO URLS-->
    <string name="base_url">http://192.168.1.52:1339</string>
    <string name="activities_index_url">/activity/mobileIndex</string>
    <string name="get_concept_of_activity_url"></string>
    <string name="title_activity_show_activity_info">ShowActivityInfoActivity</string>
    <string name="phases_index_url">/phase/getphasesactivity</string>
    <string name="create_phase_replies_url">/reply/create</string>
    <string name="log_in_url">/user/login</string>
    <string name="sign_up__url">/user/create</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>


</resources>
